Added more to using db from customer and section for pulling info using WP CLI

--- a/2023-09-08.md
+++ b/2023-09-08.md
@@ -11,30 +11,47 @@
 
 ## Resources:
 
-- Version Compare[https://www.php.net/manual/en/function.version-compare.php]
-- Download Premium Plugins[https://gpldl.com/repository/download-premium-wordpress-plugins/]
-- Plugin for pulling themes and plugins[https://wordpress.org/plugins/backwpup/]
-- WP CLI[https://developer.wordpress.org/cli/commands/]
-- Using WP CLI in Lando[https://docs.lando.dev/wordpress/tooling.html]
+- [Version Compare](https://www.php.net/manual/en/function.version-compare.php)
+- [Download Premium Plugins](https://gpldl.com/repository/download-premium-wordpress-plugins/)
+- [Plugin for pulling themes and plugins](https://wordpress.org/plugins/backwpup/)
+- [WP CLI](https://developer.wordpress.org/cli/commands/)
+- [Using WP CLI in Lando](https://docs.lando.dev/wordpress/tooling.html)
 
-## Notes:
+## How to use a db dump to copy a site locally:
 
 ### Using database from customer (Modified from Victor)
 
 1. Back up current database with command `lando wp db export backup`
-2. Download the database file and put in the root of an existing site. This is in the same default place where the wp-config.php lives
-3. Run the command `lando wp db clean --yes` to delete all the existing tables for the site
+2. Download the customer's database file and put in the root of an existing site. This is in the same default place where the wp-config.php lives
+3. Run the command `lando wp db clean --yes` to delete all the existing tables for the site (don't worry, that's why you backed everything up!)
 4. Run the command `lando wp db import [db_name].sql`
-5. After it completes the import, open a database manager like phpMyAdmin or Adminer so you can see the table prefix is the default one. If not, edit the wp-config.php file and edit `$table_prefix = 'wp_';` for the correct prefix
-   - For this I used DBeaver:
-     1. Open DBeaver
-     2. File > New > Database Connection
-     3. Search and select 'MySQL'
-     4. In the terminal, run the command `lando info` to see which port your external connection is running on
-     5. In the DBeaver GUI, copy that port number and fill in 'database' 'username' and 'password' all with 'wordpress'
-6. Using the following command as an example `lando wp search-replace 'http://customer-domain.com' 'https://stable-dev.lndo.site/` run it to modify all database records to point to your local domain
-   - If you're unsure of the
-7. If you don't have admin credentials for the site, use the following command to create your own admin user: wp `user create victor victor@tec.com --user_pass=lalala --role=administrator --allow-root`
-8. You are ready to use the site locally and log in with your admin user
+5. Run the command `lando wp db prefix` to see the prefix that the tables use. If it is different than `wp_` edit the wp-config.php file to match what it is
+6. Using the following command as an example `lando wp search-replace 'http://customer-domain.com' 'https://stable-dev.lndo.site/'` to modify all database records to point to your local domain
+   - If you're unsure of the site's domain, you can look in the wp_options table
+7. If you don't have admin credentials for the site, use the following command to create your own admin user: `lando wp user create sam sam.dokus@theeventscalendar.com --user_pass=password --role=administrator --allow-root`
+8. Go to 'https://stable-dev.lndo.site/' and log in with your admin user
+9. Once you're done you can switch back to your database by following the same process but importing the backup database instead of the customer's
 
-_Note:_ active plugins and themes should already be placed in the corresponding `wp-content/plugins` or `wp-content/themes` directories. Plugins that were active on the production site that are not present on the local installation will get automatically deactivated when you navigate to /wp-admin/plugins.php.
+_Note:_ Plugins that were active on the production site that are not present on the local installation will get automatically deactivated when you navigate to /wp-admin/plugins.php. These can be imported and added to the wp-content folder by using one of the plugins listed in the Resources section above
+
+### Pulling information from db using WP CLI
+
+#### Option 1 - Run SQL Queries
+
+1. Run the command `lando wp db cli` to open a MySQL console
+2. Run the SQL query `SELECT * FROM wp_tec_events;` to see the entire Events table
+3. Run the SQL query `SELECT * FROM wp_tec_events WHERE start_date > NOW();` to see all upcoming events
+4. Run the SQL query `SELECT * FROM wp_options WHERE option_name = 'tribe_events_calendar_options'\G` to see all the settings for The Events Calendar
+
+#### Option 2 - WP Shell
+
+1. Run the command `lando wp shell` to open the WP Shell CLI
+2. From here you can execute PHP commands, including `tribe_events()->count();` _(except I'm running into an issue where this keeps saying ->int(5) but I know that there's many more events than that)_
+
+### Using DBeaver to inspect the database
+
+1.  Open DBeaver
+2.  File > New > Database Connection
+3.  Search and select 'MySQL'
+4.  In the terminal, run the command `lando info` to see which port your external connection is running on
+5.  In the DBeaver GUI, copy that port number and fill in 'database' 'username' and 'password' all with 'wordpress'
