Added notes following 1:1

--- a/2023-09-08.md
+++ b/2023-09-08.md
@@ -36,17 +36,24 @@ _Note:_ Plugins that were active on the production site that are not present on 
 
 ### Pulling information from db using WP CLI
 
-#### Option 1 - Run SQL Queries
+#### Option 1 - WP Shell
+
+1. Run the command `lando wp shell` to open the WP Shell CLI
+2. From here you can execute PHP commands, including `tribe_events()->per_page(-1)->count();`
+
+#### Option 2 - WP CLI
+
+1. Run the command `lando wp post list --post_type=tribe_events` to return a table of all the tribe_event post types (AKA all the events)
+2. Run the command `lando wp post meta list <id>` to return all the meta for a given event
+3. To return only a select few meta keys you can add `--keys=<keys>` to the above command
+4. Piping and xargs can be used to take the output of these commands and then do something with them - for example: `lando wp post meta list 315 --keys=_EventCost --format=json | xargs echo {}` This can be a great tool for automating commands used often, or saving outputs to a file, etc.
+
+#### Option 3 - Run SQL Queries
 
 1. Run the command `lando wp db cli` to open a MySQL console
 2. Run the SQL query `SELECT * FROM wp_tec_events;` to see the entire Events table
 3. Run the SQL query `SELECT * FROM wp_tec_events WHERE start_date > NOW();` to see all upcoming events
 4. Run the SQL query `SELECT * FROM wp_options WHERE option_name = 'tribe_events_calendar_options'\G` to see all the settings for The Events Calendar
-
-#### Option 2 - WP Shell
-
-1. Run the command `lando wp shell` to open the WP Shell CLI
-2. From here you can execute PHP commands, including `tribe_events()->count();` _(except I'm running into an issue where this keeps saying ->int(5) but I know that there's many more events than that)_
 
 ### Using DBeaver to inspect the database
 
