Added more notes for how to run tests and started how to write tests

--- a/2023-09-15.md
+++ b/2023-09-15.md
@@ -12,13 +12,15 @@
 - [Slic Repo](https://github.com/stellarwp/slic)
 - [Codeception Docs](https://codeception.com/docs/Introduction)
 - [Composer Docs](https://getcomposer.org/doc/00-intro.md)
+- [wp-browser Docs](https://wpbrowser.wptestkit.dev/)
 
 ## Notes
 
 - The slic (StellarWP Local Interactive Containers) CLI command provides a containerized and consistent environment for running automated tests.
 - Slic configures a Codeception testing environment for you, which supports unit (pieces of code), functional (web requests), and acceptance (user perspective) tests
-- _The links to [wp-browser](https://wpbrowser.wptestkit.dev/) are pointing to empty repos_
+- _The links to [wp-browser](https://wpbrowser.wptestkit.dev/) are pointing to empty repos - seems like it's been moved to [here](https://wpbrowser.wptestkit.dev/)_
 - Composer is a tool for dependency management in PHP -> stored in the `/vendor` directory - very similar to node's npm
+- wp-browser is a set of modules of middleware to further build off Codeception
 
 ## Using slic
 
@@ -31,6 +33,38 @@
 5. Initializes a plugin for use in slic by running `slic init the-events-calendar`
 6. Now slic is ready and pointing at TEC and ready to run some tests.
 
-### Writing and Running Tests
+### Running Tests
 
-1. To run the full test suite run `slic run wpunit` - the config file for these tests can be found in `plugins/the-events-calendar/tests/wpunit.suite.dist.yml`
+1. Codeception follows a specific directory structure to locate and run tests. By default, it looks for tests in the tests directory within your Codeception project. Here's a breakdown of the default directory structure:
+
+```
+project-root/
+├── tests/
+│   ├── acceptance/
+│   ├── functional/
+│   ├── unit/
+│   ├── _bootstrap.php
+│   └── _output/
+├── codeception.yml
+└── vendor/
+```
+
+2.  In the case of TEC, a lot of tests have been added to the /tests directory. To run the full test suite run `slic run wpunit` -> these tests are written in `wp-content/plugins/the-events-calendar/tests/wpunit`
+3.  To run a specific test, you can run `slic run /path/to/test`
+
+### Writing Tests
+
+1. In the `/tests/wpunit/functions/template-tags` directory create a php file
+   _When I try to just add a file to /tests I get an error that the suite cannot be found - is this because a `.suite.dist.yml` file is needed for each new suite?_
+2. At the top of the page add
+
+```
+use Tribe\Events\Test\Testcases\Events_TestCase;
+
+class SamTest extends Events_TestCase{
+}
+```
+
+    This pulls the class `Events_TestCase` which extends Codeception's `WPTestCase` by adding the "factories" that let you build dummy events, organizers, and venues for testing purposes on top of all of the built in tests that are available through Codeception
+
+3. Write some tests: when writing tests, there needs to be a docblock before the function with an explaination of what is being tested and the tag `@test`
