Added more notes to writing tests

--- a/2023-09-15.md
+++ b/2023-09-15.md
@@ -50,13 +50,13 @@ project-root/
 ```
 
 2.  In the case of TEC, a lot of tests have been added to the /tests directory. To run the full test suite run `slic run wpunit` -> these tests are written in `wp-content/plugins/the-events-calendar/tests/wpunit`
-3.  To run a specific test, you can run `slic run /path/to/test`
+3.  To run a specific test, you can run `slic run /path/to/test` - for example: `slic run tests/wpunit/functions/template-tags/SamTest.php`
 
 ### Writing Tests
 
 1. In the `/tests/wpunit/functions/template-tags` directory create a php file
-   _When I try to just add a file to /tests I get an error that the suite cannot be found - is this because a `.suite.dist.yml` file is needed for each new suite?_
-2. At the top of the page add
+   _When I try to just add a file to `/tests` I get an error that the suite cannot be found - is this because a `.suite.dist.yml` file is needed for each new suite?_
+2. At the top of the page add this code:
 
 ```
 use Tribe\Events\Test\Testcases\Events_TestCase;
@@ -65,6 +65,23 @@ class SamTest extends Events_TestCase{
 }
 ```
 
-    This pulls the class `Events_TestCase` which extends Codeception's `WPTestCase` by adding the "factories" that let you build dummy events, organizers, and venues for testing purposes on top of all of the built in tests that are available through Codeception
+- This pulls the class `Events_TestCase` which extends Codeception's `WPTestCase` by adding the "factories" that let you build dummy events, organizers, and venues for testing purposes on top of all of the built in tests that are available through Codeception
 
-3. Write some tests: when writing tests, there needs to be a docblock before the function with an explaination of what is being tested and the tag `@test`
+3. The structure of a test is a _docblock_ with an explaination of what is being tested and the tag `@test` and then the _function_ with a descriptive name about what the expected behavior should be. Inside the function there can be any number of _assertions_
+
+- Assertions are the tests built in to Codeception and you access it through `$this` - for example:
+
+```
+$this->assertEquals(1, 1);
+```
+
+4. Also within the `$this` variable are the factory functions to create different posts (including events, organizers, and venues) for testing purposes - for example:
+
+```
+        $this->factory()->event->create();
+        $events = tribe_events()->per_page(-1)->count();
+
+        $this->assertEquals(1, $events);
+```
+
+- Building dummy data for testing is important _(and definitely something I need to practice more to feel more comfortable doing)_
