added more details to last week's notes and added notes while reading through documentation

--- a/2023-09-15.md
+++ b/2023-09-15.md
@@ -55,10 +55,10 @@ project-root/
 ### Writing Tests
 
 1. In the `/tests/wpunit/functions/template-tags` directory create a php file
-   _When I try to just add a file to `/tests` I get an error that the suite cannot be found - is this because a `.suite.dist.yml` file is needed for each new suite?_
+   _When I try to just add a file to `/tests` I get an error that the suite cannot be found - is this because a `.suite.dist.yml` file is needed for each new suite?_ --> see notes on `Namespace` in next week's dev notes
 2. At the top of the page add this code:
 
-```
+```php
 use Tribe\Events\Test\Testcases\Events_TestCase;
 
 class SamTest extends Events_TestCase{
@@ -71,7 +71,7 @@ class SamTest extends Events_TestCase{
 
 - Assertions are the tests built in to Codeception and you access it through `$this` - for example:
 
-```
+```php
 $this->assertEquals(1, 1);
 ```
 
