--- a/2023-09-22.md
+++ b/2023-09-22.md
@@ -12,6 +12,7 @@
 ## Resources
 
 - [Codeception Unit Tests](https://codeception.com/docs/UnitTests)
+- [Codeception Commands](https://codeception.com/docs/reference/Commands) _confused about how to use while using slic_
 - [Assertions](https://docs.phpunit.de/en/8.5/assertions.html)
 - [Annotations](https://docs.phpunit.de/en/8.5/annotations.html)
 - [SetUp and TearDown](https://docs.phpunit.de/en/8.5/fixtures.html#more-setup-than-teardown)
@@ -23,3 +24,28 @@
   - Essentially all about scope and being able to call different files and their classes through aliases
   - When importing using the `use` keyword, it needs to be in the outermost scope of the file (AKA not within a function). This is because the importing is done at compile time and not runtime, so it cannot be block scoped.
   - Without any namespace definition, all class and function definitions are placed into the global space - as it was in PHP before namespaces were supported. Prefixing a name with \ will specify that the name is required from the global space even in the context of the namespace.
+- When writing tests, the number of variables created and used is important to consider for performance reasons - there usually is no reason to create more than 3 variables at a time
+
+### Setting up a test
+
+- If slic is not already set up and ready, navigate to the /plugin directory and run:
+  - `slic here`
+  - `slic use the-events-calendar`
+  - `slic start`
+  - `slic init the-events-calendar`
+- Create a new file in `wp-content/plugins/the-events-calendar/tests/wpunit/TEC/Events` with the name of your testing class
+- Declare the namespace `\TEC\Events` and import `Events_TestCase`:
+
+```
+<?php
+
+namespace TEC\Events; // lets slic know the context of the file when running the tests
+
+use Tribe\Events\Test\Testcases\Events_TestCase; // allows new test class to extend Events_TestCase, which extends Codeception's `WPTestCase`
+```
+
+- Declare the class where your tests will go:
+
+```
+class SamTest extends Events_TestCase {}
+```
