Added test for changing TEC setting

--- a/2023-09-22.md
+++ b/2023-09-22.md
@@ -137,3 +137,54 @@ class SamTest extends Events_TestCase
         $this->assertEquals($expected, $actual);
     }
 ```
+
+- Running `slic run tests/wpunit/TEC/Events/SamTest.php` returns:
+
+```
+slic version 1.5.0 - StellarWP local testing and development tool
+
+Using the-events-calendar
+
+Codeception PHP Testing Framework v4.2.2 https://helpukrainewin.org
+Powered by PHPUnit 6.5.14 by Sebastian Bergmann and contributors.
+
+Wpunit Tests (3) -------------------------------------------
+✔ SamTest: Should_create_a_new_event (0.09s)
+✔ SamTest: Should_be_able_to_change_event_details (0.04s)
+✔ SamTest: Should_not_have_changes_persist (0.05s)
+------------------------------------------------------------
+
+
+Time: 3.24 seconds, Memory: 54.50MB
+
+OK (3 tests, 3 assertions)
+```
+
+### Change TEC settings and tests if it affects the event
+
+- For changing event settings programmatically, use `tribe_set_option()`
+- Example:
+
+```php
+/**
+ * @test
+ * Should be able to change a setting programmatically
+ */
+    public function should_be_able_to_change_settings()
+    {
+        // grab the original setting
+        $original = tribe_get_option('singleEventSlug');
+
+        // change the setting
+        tribe_update_option('singleEventSlug', 'calendar');
+
+        //test that the setting has been changed
+        $expected = 'calendar';
+        $actual = tribe_get_option('singleEventSlug');
+        $this->assertEquals($expected, $actual);
+        $this->assertNotEquals($original, $actual);
+
+        // Makes sure to change the option back after testing
+        tribe_update_option('singleEventSlug', $original);
+    }
+```
