cleaned up notes and added more info

--- a/2023-09-29.md
+++ b/2023-09-29.md
@@ -2,41 +2,42 @@
 
 ## Approach:
 
-[X] Install PHPStorm
-[ ] Follow along with [this course](https://laracasts.com/series/how-to-be-awesome-in-phpstorm)
-[ ] Add more detail to Self Evaluation
-[ ] Adjust test to change a different setting than multiday cutoff
+- [X] Install PHPStorm
+- [X] Follow along with [this course](https://laracasts.com/series/how-to-be-awesome-in-phpstorm)
+- [X] Add more detail to Self Evaluation
+- [ ] Adjust test to change a different setting than multiday cutoff
 
 ## Resources
 
--
+- [Lando + PHPStorm + XDebug](https://docs.lando.dev/guides/lando-phpstorm.html)
 
 ## Notes
 
-- `cmd + 1` -> Toggle sidebar
-- 'Symbols' = methods
-- `cmd + ,` -> Bring up preferences
+- 'Symbols' === methods
 - Can add custom color schemes by adding `.icls` files to `~/Library/Preferences/WebIde80/colors`
-    - One library can be found [here](https://github.com/daylerees/colour-schemes)
-    - Click on `Raw` for the theme that you want and copy the URL
-    - In terminal, navigate to `~/Library/Preferences/WebIde80/colors`
-    - Run the command `wget <URL you copied eariler>`
-      Restart the editor and you should see the new theme as an option in your preferences
-- `shift + cmd + A` -> Seach bar
-- Changed keystroke to be `cmd + p` -> opens search for files
+  - One library can be found [here](https://github.com/daylerees/colour-schemes)
+  - Click on `Raw` for the theme that you want and copy the URL
+  - In terminal, navigate to `~/Library/Preferences/WebIde80/colors`
+  - Run the command `wget <URL you copied eariler>`
+  - Restart the editor and you should see the new theme as an option in your preferences
 - Every tree view is filterable
+- Command keystrokes can be edited 
+- Can create live templates for essentially creating macros/snippets for faster repeated code (episode 7)
+- _Question: Does TEC use the file templates that he's describing? Is that something I should reconfigure like he's
+    walking through?_
+- For Xdebug configuration, the key was adding `/app` to the 'Preferences > PHP > Servers' configuration
+
+### Important Commands
+- `cmd + 1` -> Toggle sidebar
+- `cmd + ,` -> Bring up preferences
+- `shift + cmd + A` -> Seach bar
+- `cmd + p` -> opens search for files
 - `cmd + r` -> show file structure, and then it can be filtered
 - `cmd + option + o` -> find a method by name
 - `cmd + ↑` -> sets the current directory to whatever file is open
 - `cmd + n` -> create new file or class, etc.
 - `shift + shift` -> search actions
-- Can create live templates for essentially creating macros/snippets for faster repeated code (episode 7)
 - `cmd + option + l` -> reformat file
 - `control + t` -> open refactor options
     - Can use these options to quickly and consistently rename or extract variables or change to inline
-- _Question: Does TEC use the file templates that he's describing? Is that something I should reconfigure like he's
-  walking through?_
 - `option + return` -> can automatically import classes
-- When getting to the section of setting up xdebug, I might be overcomplicating things because I already had xdebug set
-  up but for VSCode?
-- 
