Added new dev day file, made a few edits to last week

--- a/2023-09-29.md
+++ b/2023-09-29.md
@@ -1,11 +1,10 @@
-# GOAL: Install PHPStorm and Practice Tests More
+# GOAL: Install PHPStorm
 
 ## Approach:
 
 - [X] Install PHPStorm
 - [X] Follow along with [this course](https://laracasts.com/series/how-to-be-awesome-in-phpstorm)
 - [X] Add more detail to Self Evaluation
-- [ ] Adjust test to change a different setting than multiday cutoff
 
 ## Resources
 
