--- a/2023-10-05.md
+++ b/2023-10-05.md
@@ -3,4 +3,19 @@
 ## Approach:
 - [ ] Confirm slic is running properly after switching to PHPStorm
 - [ ] Switch test of how settings affect calendar from looking at Multiday setting to Date/Time format
+
+## Resources
+
 - 
+
+## Notes
+
+- Refresher on starting slic:
+  - In the plugin directory run: 
+    - `slic here` // tell slic how to find your project
+    - `slic use the-events-calendar` // points to where you'll be running tests
+    - `slic init`
+  - `cd the-events-calendar`
+  -  - `slic init the-events-calendar` // sets up slic for TEC in the Docker containers
+  - `slic run [path/to/test]`
+- For the tests that I set up: `slic run test/wpunit/TEC/Events/SamTest.php`
