--- a/2023-10-05.md
+++ b/2023-10-05.md
@@ -1,21 +1,30 @@
 # GOAL: Continue Practicing Tests
 
-## Approach:
-- [ ] Confirm slic is running properly after switching to PHPStorm
-- [ ] Switch test of how settings affect calendar from looking at Multiday setting to Date/Time format
-
-## Resources
-
-- 
-
 ## Notes
 
+- Also had performance review
 - Refresher on starting slic:
   - In the plugin directory run: 
+    - `slic start`
     - `slic here` // tell slic how to find your project
     - `slic use the-events-calendar` // points to where you'll be running tests
-    - `slic init`
   - `cd the-events-calendar`
   -  - `slic init the-events-calendar` // sets up slic for TEC in the Docker containers
   - `slic run [path/to/test]`
 - For the tests that I set up: `slic run test/wpunit/TEC/Events/SamTest.php`
+- 
+- I kept getting an error `[Error] Call to undefined method Codeception\Util\ReflectionHelper::getClassFromParameter()` and I finally [sought help in the #tec-dev channel](https://lw.slack.com/archives/G01H7Q57P1C/p1696972710384309) and George came to my rescue:
+
+> From within your the-events-calendar directory:
+rm -rf composer.lock
+Then, cd into the-events-calendar/common and:
+rm -rf vendor
+git checkout -- vendor
+composer install --no-dev
+Now, go back up one dir to the the-events-calendar directory again, and:
+rm -rf vendor
+git checkout -- vendor
+composer install
+Note how in /common, it's composer install with --no-dev, but in the plugin dir it's just composer install. That's intentional!
+
+- Note to self: ask for help earlier! Spent *way* too long trying to figure things out on my own - ask for help sooner next time!!! 
