small changes and updates

--- a/2023-08-25.md
+++ b/2023-08-25.md
@@ -16,8 +16,8 @@ lando rebuild
 - Site was super slow though (30 seconds+ per page load)
   - Looked into Docker ORB https://orbstack.dev/ per Luca’s suggestion
   - Downloaded OrbStack, but when I clicked on “migrate Docker” it gave an error message
-  - Trying to run lando start results in 404 or ECONNREFUSED errors
-  - Tried to destoy and rebuild Lando and Docker again, no change
+  - Trying to run lando start results in 404 or `ECONNREFUSED` errors
+  - Tried to `destoy` and `rebuild` Lando and Docker again, no change
   - Tried deleting and then reinstalling OrbStack, error changed to 500  
   - Tried restarting computer, no change
   - Tried deleting all containers in OrbStack and Docker, but the Docker ones are still showing
