--- a/2023-10-13.md
+++ b/2023-10-13.md
@@ -23,4 +23,8 @@
 
 #### Re-writing the test for changing settings to change date format instead of multiDay:
 - Use WP CLI to check the setting options for TEC
-  - Seems like PHPStorm might need some extra configuration to be able to run `lando wp`
+  - Hitting a roadblock for how to get `lando wp` commands to work - error is that when trying to run any lando command a debug terminal opens instead and I'm prompted to update lando 
+  - Need to update Lando --> the `arm64` dmg file is the one for the newer Macs 
+  - After updating, when trying to restart Lando I got that `error: no such proxy` message --> tore everything down and started over and it seems to be working again (see Aug 25 notes) 
+  - Got everything updated, slic working again and now when trying to use `lando wp` commands they just hang and the debug terminal is still opened - feeling a bit stuck here so stepping away until next week! 
+  
