adding fix for PHPStorm and WP CLI issue

--- a/2023-10-13.md
+++ b/2023-10-13.md
@@ -26,5 +26,21 @@
   - Hitting a roadblock for how to get `lando wp` commands to work - error is that when trying to run any lando command a debug terminal opens instead and I'm prompted to update lando 
   - Need to update Lando --> the `arm64` dmg file is the one for the newer Macs 
   - After updating, when trying to restart Lando I got that `error: no such proxy` message --> tore everything down and started over and it seems to be working again (see Aug 25 notes) 
-  - Got everything updated, slic working again and now when trying to use `lando wp` commands they just hang and the debug terminal is still opened - feeling a bit stuck here so stepping away until next week! 
+  - Got everything updated, slic working again and now when trying to use `lando wp` commands they just hang and the debug terminal is still opened - feeling a bit stuck here so stepping away until next week!
+- Instead, using DBeaver to look at the TEC setting options
+  - Quick review: used `lando info` to grab the external port number (NOTE: avoid grabbing the port number for REDIS - loking for the MySQL port)
+  - To connect to the db, `File > New > Database Connection` and then enter the port number and 'wordpress' for database, username,and password
+  - Once connected, open the database and navigate to the wp_options table 
+  - Do an SQL search in the top bar: ` option_name = 'tribe_events_calendar_options'`
+- Reached out in [Slack](https://lw.slack.com/archives/G01H7Q57P1C/p1697496521888699) again (I feel so needy) and Luca came to my rescue for getting PHPStorm and WP CLI configured correctly
+  - Needed to open settings (`cmd + ,`) 
+  - Disable  `Debug > XDebug > Force break …` options
+  - Disable `Break at first line in PHP scripts` option
+  - Checked which port XDebug running on in Lando:
+```CLI 
+$ lando ssh
+> php -i | grep xdebug\.client_port
+```
+  - That returned `9003`, so `9000` was removed from the list of `XDebug > Debug port:`
+  - Applied these setting changes and restarted PHPStorm and then things were working!! 
   
