Finished up notes about slic tests

--- a/2023-10-13.md
+++ b/2023-10-13.md
@@ -4,7 +4,7 @@
 - [X] Update `build` script to include `rm -rf composer.lock` in TEC directory and `--no-dev` in common
 - [X] Update plugins on dev site
 - [X] Practice getting slic up and running again 
-- [ ] Rewrite test for testing how setting affects TEC
+- [X] Rewrite test for testing how setting affects TEC
 
 ## Additional Dev Day To Do:
 - [ ] Submit KB request for Kandence snippet
@@ -37,10 +37,44 @@
   - Disable  `Debug > XDebug > Force break …` options
   - Disable `Break at first line in PHP scripts` option
   - Checked which port XDebug running on in Lando:
+
 ```CLI 
 $ lando ssh
 > php -i | grep xdebug\.client_port
 ```
+- 
   - That returned `9003`, so `9000` was removed from the list of `XDebug > Debug port:`
   - Applied these setting changes and restarted PHPStorm and then things were working!! 
-  
+- Found that the option is `dateWithYearFormat` 
+- Added this test: 
+```php
+ /**
+ * @test
+ * Should test that changing settings affect events
+ */
+  public function should_test_effect_of_changing_settings_on_events()
+  {
+    // grab the original setting
+    $original = tribe_get_option('dateWithYearFormat');
+
+    // test how event behaves before changing setting
+    $before = $original;
+    $expected = 'F j, Y';
+    $this->assertEquals($expected, $before, 'Event date format should not change before changing setting');
+
+    //change the setting
+    tribe_update_option('dateWithYearFormat', 'Y-m-d');
+
+    $after = tribe_get_date_format( $with_year = true);
+    $expected = 'Y-m-d';
+    $this->assertEquals($expected, $after, 'Event date format should change after changing setting');
+
+    // Make sure to change the option back after testing
+    tribe_update_option('dateWithYearFormat', $original);
+
+    // Double check that the option was changed back
+    $post_test = tribe_get_date_format( $with_year = true);
+    $expected = 'F j, Y';
+    $this->assertEquals($expected, $post_test, 'Event date format should be changed back');
+}
+```
