added some documentation files and notes for today

--- a/2023-10-13.md
+++ b/2023-10-13.md
@@ -5,15 +5,7 @@
 - [X] Update plugins on dev site
 - [X] Practice getting slic up and running again 
 - [X] Rewrite test for testing how setting affects TEC
-
-## Additional Dev Day To Do:
-- [ ] Submit KB request for Kandence snippet
-- [ ] Convert ticket flowchart to Mermaid.js file? 
-- [ ] ORM documentation? 
-- [ ] Tribe_Context documentation? 
-- [ ] Start prepping for dev rant? 
-
-## Resources
+- [X] Rewrite test for testing how setting affects TEC
 
 ## Notes
 - Another review of slic workflow: `slic up` --> `slic run ...`
