Added new dev day notes for Oct 27 2023

--- a/2023-10-20.md
+++ b/2023-10-20.md
@@ -9,7 +9,7 @@
 - [ ] Submit KB request for Kandence snippet
 - [ ] Convert ticket flowchart to Mermaid.js file?
 - [ ] ORM documentation?
-- [ ] Tribe_Context documentation?
+- [X] Tribe_Context documentation?
 - [ ] Start prepping for dev rant? 
 
 ## Resources:
@@ -19,7 +19,7 @@
 ## Notes
 - Going back to my 'Context Tester' shortcode plugin
 - Added at least my base understanding of  `tribe_context()` to the documentation draft -> the main overarching use and the available locations data
-  - @todo - send to Matt or Gustavo for feedback
+  - [X] send to Matt or Gustavo for feedback
 - Researched where `tribe_context` is actually used in the code base:
   - `/the-events-calendar/common/src/functions/template-tags/general.php:811`
     - This line is where the function `tribe_context()` is defined
