finished troubleshooting issue

--- a/2023-10-27.md
+++ b/2023-10-27.md
@@ -14,19 +14,17 @@ Now I'm getting errors about a fatal happening when trying to activate ET and I 
   - In the terminal, navigate to the `/plugin` directory 
   - `git clone —recursive [SSH]`
   - `cd` to that plugin's directory
-  - `slic use [plugin directory]`
-  - Do each of these commands:
-    1. `slic composer install` (** NOTE only do one plugin this way, all others `slic composer install --no-dev` ) —> for allowing testing
-    2. `nvm use`
-    3. `npm ci`
-    4. `npm run build`
-  - If there’s a `/common` directory in the plugin, `cd` into that directory and then `slic use [plugin directory]/common` and then repeat all the commands in step 7
-- Maybe all of the above could be run in one line: `composer install && nvm use && npm install && npm run build`
-  - Related Slack convo found [here](https://lw.slack.com/archives/C01SYM19N7K/p1654704588193069)
-  - Yeah, that seemed to be the problem, running that one line in the main directory and in /common got the plugin installed and working! 
+  - `composer install && nvm use && npm install && npm run build`
+  - If there’s a `/common` directory in the plugin, `cd` into that directory and then `composer install && nvm use && npm install && npm run build` again
 
+- Related Slack convo found [here](https://lw.slack.com/archives/C01SYM19N7K/p1654704588193069)
+  - My problem seems to be that in my older instructions I was doing `slic use` and then `slic composer install` and this was not adding the correct folders to the `vendor` directory
+  - It won't show in these notes, but that took me a couple of hours to get to the bottom of... I figured out what the problem was (required folders missing) by reading the fatal error message, but it took me a lot of researching around to find the solution for how to avoid that issue
 
-
+- HOWEVER, the main issue where the Attendees are not showing is still happening :( 
+  - Trying to delete and then re-install WC
+  - Trying to delete and then re-clone ETP 
+  - Adjusted setting in Tickets > Settings > Integrations to generate attendee records as soon as order is placed, and that seemed to do the trick - still kinda confused but glad it's sorted out
 
 ## Resources:
 - https://github.com/the-events-calendar/tec-cli 
