added notes on dev site issues

--- a/2023-08-25.md
+++ b/2023-08-25.md
@@ -21,7 +21,7 @@ lando rebuild
   - Tried deleting and then reinstalling OrbStack, error changed to 500  
   - Tried restarting computer, no change
   - Tried deleting all containers in OrbStack and Docker, but the Docker ones are still showing
-    - Found that using the command docker ps -a shows all active containers and their status, and that is currently showing as empty (even though the desktop window is showing them still - their status is ‘Exited’ but they’re still there)
+    - Found that using the command `docker ps -a` shows all active containers and their status, and that is currently showing as empty (even though the desktop window is showing them still - their status is ‘Exited’ but they’re still there)
   - Did a `lando rebuild` and now everything seems to be working again 😭 
 - Once dev site was working, I repeated the troubleshooting process for this ticket and updated the Jira ticket with my documentation for that
 - Then I will admit I got distracted with my overdue tickets for 1-2 hours but then I remembered it was Friday AKA Dev Day and I refocused!
