added mermaid.js draft of timeline

--- a/raw-notes/2024-01-05.md
+++ b/raw-notes/2024-01-05.md
@@ -1,11 +1,11 @@
 # Brain Dump
 
 ## Breaking Things Into Smaller Tasks
-- [ ] Start a document for road map of 2024 Dev Plan 
+- [X] Start a document for road map of 2024 Dev Plan 
   - Use this repo and [Mermaid.js](https://mermaid.js.org/)
-- [ ] Write out all tasks/goals
-- [ ] Prioritize tasks
-- [ ] Use prioritization to draft timeline
+- [X] Write out all tasks/goals
+- [X] Prioritize tasks
+- [X] Use prioritization to draft timeline
 - [ ] Brainstorm how to stay organized - restructure these notes? 
 
 
