switched dark/light mode to template

--- a/2024-plan.md
+++ b/2024-plan.md
@@ -11,7 +11,7 @@ timeline
         : Bonus = SQL Course
         March 
         : Main Focus = Testing <br> (slic, tut)
-        : Plugin = Light/Dark Mode for Calendar
+        : Plugin = Template Modding
         : Bonus = WP Query, User Query, etc. 
         April
         : Main Focus = Tooling
